# marketing-ops-copilot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: auth.py  main.py
apps/cli/: copilot.py
data/: clicks.csv  conversions.csv  spend.csv
docs/: docs_budget_change_process.md  docs_creative_guidelines.md  docs_experiment_playbook.md  docs_glossary.md  docs_naming_conventions.md  docs_utm_policy.md  docs_weekly_reporting_sop.md
evals/: golden.jsonl
promptfoo/: chat.promptfooconfig.yaml  investigate.promptfooconfig.yaml
promptfoo/assertions/: citationsAppearInAnswer.js  citationsNonEmpty.js  groundedNumbersFromTools.js  investigateShape.js  toolRunsNonEmpty.js
scripts/: demo.sh  eval.py  generate_mock_data.py  migrate_db.py
tests/: test_chunking.py
